project-1/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    env: prod
    app: main
    tier: backend
    owner: LitvishkoMaxim
spec:
  containers:
    - name: app
      image: glockers/k8s-pet-project
