project-1/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterIP-pet-service
spec:
  selector:
    app: main-pet-project
  ports:
    - name: name-pet-service-port
      protocol: TCP
      port: 3000 # Port on Load balancer
      targetPort: 3000 # POd on port
